--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Our Menu</h1>
 
 <div class="row">
-    <div id="section_chicken" class="col-lg-4 col-mt-6 col-mb-12">
+    <div id="chicken" class="col-lg-4 col-mt-6 col-mb-12">
         <div id="box_one">
             <div>
                 <div id="one_title">Chicken</div>
@@ -22,7 +22,7 @@
     </div>
 
     <!-- SECTION BEEF -->
-    <div id="section_beef" class="col-lg-4 col-mt-6 col-mb-12">
+    <div id="beef" class="col-lg-4 col-mt-6 col-mb-12">
         <div id="box_two">
             <div>
                 <div id="two_title">Beef</div>
@@ -34,7 +34,7 @@
     </div>
 
     <!-- SECTION SUSHI -->
-    <div id="section_sushi" class="col-lg-4 col-mt-12 col-mb-12">
+    <div id="sushi" class="col-lg-4 col-mt-12 col-mb-12">
         <div id="box_three">
             <div>
                 <div id="three_title">Sushi</div>
