--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -12,11 +12,11 @@
   <header>
     <nav class="navbar navbar-dark bg-dark" id="top">
       <a class="navbar-brand " href="index.html"><h4>Food,LLC</h4></a>
-      <button class="navbar-toggler collapsed d-sm-none" type="button" data-toggle="collapse" data-target="#navbarscollapse" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler collapsed d-md-none" type="button" data-toggle="collapse" data-target="#navbarscollapse" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     
-      <div class="navbar-collapse collapse d-sm-none" id="navbarscollapse" style="height: 0px;">
+      <div class="navbar-collapse collapse d-md-none" id="navbarscollapse" style="height: 0px;">
         <ul class="nav navbar-nav mr-auto">
           <li class="nav-item text-center">
             <a class="nav-link text-light" href="#chicken">Chicken <span class="sr-only">(current)</span></a>
