--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -36,7 +36,7 @@
   </header>
 <div class="container-fluid">
 
-<h1 class="pad">Our Menu</h1>
+<h1 class="pad test-center">Our Menu</h1>
 <center>
 <div class="row">
     <div id="chicken" class="col-md-12 col-sm-12 col-xs-12">
